Fix sidebar scrolling w/ overflow-clip

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,7 +29,7 @@ code {
 }
 
 body > div {
-  @apply overflow-x-hidden;
+  @apply overflow-x-clip;
 }
 
 body {
